Update DESIGN.md and TESTING_CHECKLIST.md with formatting and content refinements; testing checkilist

--- a/index.html
+++ b/index.html
@@ -105,5 +105,10 @@
 
     <!-- Main Application Script -->
     <script src="scripts/app.js"></script>
+    
+    <!-- Testing Scripts (only included in development) -->
+    <script src="test-runner.js"></script>
+    <script src="test-data-generator.js"></script>
+    <script src="performance-test.js"></script>
 </body>
 </html> 
