everything is working except story

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
     </div>
 
     <!-- Utility Scripts -->
-    <script src="fix-missing-files.js"></script>
     <script src="scripts/utils/data-utils.js"></script>
     <script src="scripts/utils/ui-utils.js"></script>
     <script src="scripts/utils/event-utils.js"></script>
@@ -104,14 +103,10 @@
     <script src="scripts/components/combat-console.js"></script>
     <script src="scripts/components/settings.js"></script>
 
+    <!-- Component Initializer -->
+    <script src="scripts/component-initializer.js"></script>
+
     <!-- Main Application Script -->
     <script src="scripts/app.js"></script>
-    
-    <!-- Testing Scripts (only included in development) -->
-    <script src="test-runner.js"></script>
-    <script src="test-data-generator.js"></script>
-    <script src="performance-test.js"></script>
-    <script src="integration-test.js"></script>
-    <script src="test-tools-initializer.js"></script>
 </body>
 </html> 
