Enhance story navigator UI with panel headers, controls, and styling

--- a/index.html
+++ b/index.html
@@ -33,13 +33,37 @@
             <section id="story-section" class="tab-content active">
                 <div id="story-navigator">
                     <div id="thread-list" class="panel">
-                        <!-- Thread list content will be dynamically inserted -->
+                        <div class="panel-header">
+                            <h3>Plot Threads</h3>
+                            <div class="panel-controls">
+                                <input type="text" class="thread-filter" placeholder="Filter threads...">
+                                <button class="new-thread-button">New Thread</button>
+                            </div>
+                        </div>
+                        <div class="panel-content">
+                            <!-- Thread list content will be dynamically inserted -->
+                        </div>
                     </div>
                     <div id="beat-display" class="panel">
-                        <!-- Beat display content will be dynamically inserted -->
+                        <div class="panel-header">
+                            <h3>Story Beats</h3>
+                            <div class="panel-controls">
+                                <input type="text" class="beat-search" placeholder="Search beats...">
+                                <button class="new-beat-button">New Beat</button>
+                                <button class="reveal-toggle">Show Hidden</button>
+                            </div>
+                        </div>
+                        <div class="panel-content">
+                            <!-- Beat display content will be dynamically inserted -->
+                        </div>
                     </div>
                     <div id="relationship-map" class="panel">
-                        <!-- Relationship map will be dynamically inserted -->
+                        <div class="panel-header">
+                            <h3>Relationships</h3>
+                        </div>
+                        <div class="panel-content">
+                            <!-- Relationship map will be dynamically inserted -->
+                        </div>
                     </div>
                 </div>
             </section>
