Add immutable data manipulation and function utility methods; ready to test docker

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <script src="scripts/utils/data-utils.js"></script>
     <script src="scripts/utils/ui-utils.js"></script>
     <script src="scripts/utils/event-utils.js"></script>
+    <script src="scripts/utils/error-utils.js"></script>
 
     <!-- State Management -->
     <script src="scripts/state/state-manager.js"></script>
